--- a/Home.html
+++ b/Home.html
@@ -103,13 +103,13 @@
                    <div class="item">
                     <img alt="Second slide" src="images/guitarra.jpg">
                     <div class="carousel-caption">
-                 <h3>tes de prueba 1</h3>
+                 <h3></h3>
                     </div>
                   </div>
                   <div class="item">
                     <img alt="Third slide"  src="images/guitar2.jpg">
                     <div class="carousel-caption">
-                      <h3>tes de prueba</h3>
+                      <h3></h3>
                     </div>
                   </div>
                 </div>
@@ -148,7 +148,7 @@
         <img class="img-responsive" src="images/guitarra.jpg" alt="">
         <div class="caption-full">
           <h4 class="pull-right"></h4>
-          <h4><a href="Product.html">Producto</a></h4>
+          <h4><a href="Product.html">Guitarra John petrucci</a></h4>
           <buttom class="btn btn-primary btn-sm">
             Comprar
           </buttom>
@@ -161,7 +161,7 @@
         <img class="img-responsive" src="images/stevevai.jpg" alt="">
         <div class="caption-full">
           <h4 class="pull-right"></h4>
-          <h4><a href="Product.html">Producto</a></h4>
+          <h4><a href="Product.html">Guitarra Steve vai</a></h4>
           <buttom class="btn btn-primary btn-sm">
             Comprar
           </buttom>
@@ -171,10 +171,10 @@
 
     <div class="col-md-3 col-sm-6 col-xs-12">
       <div class="thumbnail">
-        <img class="img-responsive" src="" alt="">
+        <img class="img-responsive" src="images/amplificador-marshall.jpg" alt="">
         <div class="caption-full">
           <h4 class="pull-right"></h4>
-          <h4><a href="Product.html">Producto</a></h4>
+          <h4><a href="Product.html">Cmarshall</a></h4>
           <buttom class="btn btn-primary btn-sm">
             Comprar
           </buttom>
@@ -184,10 +184,10 @@
 
     <div class="col-md-3 col-sm-6 col-xs-12">
       <div class="thumbnail">
-        <img class="img-responsive" src="" alt="">
+        <img class="img-responsive" src="images/cable.jpg" " alt="">
         <div class="caption-full">
           <h4 class="pull-right"></h4>
-          <h4><a href="Product.html">Producto</a></h4>
+          <h4><a href="Product.html">Cable</a></h4>
           <buttom class="btn btn-primary btn-sm">
             Comprar
           </buttom>
