se agrega precio y categorias

--- a/category.html
+++ b/category.html
@@ -93,10 +93,12 @@
                 <div class="col-md-4 col-sm-6">
 
                     <div class="thumbnail">
-                        <img class="img-responsive" src="http://placehold.it/800x300" alt="">
+
+                        <img class="img-responsive" src="images/guitarras.jpg" alt="">
                         <div class="caption-full">
-                            <h4 class="pull-right">Descuento</h4>
-                            <h4><a href="Product.html">Producto</a></h4>
+                            <h4 class="pull-right">Guitarras John Petrucci.   Precio: 700.000 </h4>
+                            <h4><a href="Product.html">Detalle</a></h4>
+
                             <buttom class="btn btn-primary btn-sm ">
                             Comprar
                             </button>
@@ -107,10 +109,10 @@
                 <div class="col-md-4 col-sm-6">
 
                     <div class="thumbnail">
-                        <img class="img-responsive" src="http://placehold.it/800x300" alt="">
+                        <img class="img-responsive" src="images/pedales.jpg" alt="">
                         <div class="caption-full">
-                            <h4 class="pull-right">Descuento</h4>
-                            <h4><a href="Product.html">Producto</a></h4>
+                            <h4 class="pull-right">pedales Fender.  Precio:50.000 C/U</h4>
+                            <h4><a href="Product.html">Detalle</a></h4>
                             <buttom class="btn btn-primary btn-sm">
                             Comprar
                             </button>
@@ -121,10 +123,10 @@
                 <div class="col-md-4 col-sm-6">
 
                     <div class="thumbnail">
-                        <img class="img-responsive" src="http://placehold.it/800x300" alt="">
+                        <img class="img-responsive" src="images/amplificador-marshall.jpg" alt="">
                         <div class="caption-full">
-                            <h4 class="pull-right">Descuento</h4>
-                            <h4><a href="Product.html">Producto</a></h4>
+                            <h4 class="pull-right">Amplificador marshall 50 watts .  Precio: 200.000</h4>
+                            <h4><a href="Product.html">Detalle</a></h4>
                             <buttom class="btn btn-primary btn-sm">
                             Comprar
                             </button>
@@ -135,10 +137,10 @@
                 <div class="col-md-4 col-sm-6">
 
                     <div class="thumbnail">
-                        <img class="img-responsive" src="http://placehold.it/800x300" alt="">
+                        <img class="img-responsive" src="images/cables.jpg" alt="">
                         <div class="caption-full">
-                            <h4 class="pull-right">Descuento</h4>
-                            <h4><a href="Product.html">Producto</a></h4>
+                            <h4 class="pull-right">Cables Fender.  Precio: 18.000 C/U</h4>
+                            <h4><a href="Product.html">Detalle</a></h4>
                             <buttom class="btn btn-primary btn-sm">
                             Comprar
                             </button>
@@ -149,10 +151,10 @@
                 <div class="col-md-4 col-sm-6">
 
                     <div class="thumbnail">
-                        <img class="img-responsive" src="http://placehold.it/800x300" alt="">
+                        <img class="img-responsive" src="images/guitarras.jpg" alt="">
                         <div class="caption-full">
-                            <h4 class="pull-right">Descuento</h4>
-                            <h4><a href="Product.html">Producto</a></h4>
+                            <h4 class="pull-right">Guitarras John Petrucci jp7  .Precio: 900.000 </h4>
+                            <h4><a href="Product.html">Detalle</a></h4>
                             <buttom class="btn btn-primary btn-sm">
                             Comprar
                             </button>
@@ -163,10 +165,10 @@
                 <div class="col-md-4 col-sm-6">
 
                     <div class="thumbnail">
-                        <img class="img-responsive" src="http://placehold.it/800x300" alt="">
+                        <img class="img-responsive" src="images/bajo.jpg" alt="">
                         <div class="caption-full">
-                            <h4 class="pull-right">Descuento</h4>
-                            <h4><a href="Product.html">Producto</a></h4>
+                            <h4 class="pull-right">Bajo .  Precio:  200.00 </h4>
+                            <h4><a href="Product.html">Detalle</a></h4>
                             <buttom class="btn btn-primary btn-sm">
                             Comprar
                             </button>
@@ -177,11 +179,24 @@
                 <div class="col-md-4 col-sm-6">
 
                     <div class="thumbnail">
-                        <img class="img-responsive" src="http://placehold.it/800x300" alt="">
+                        <img class="img-responsive" src="images/bateria.jpg" alt="">
                         <div class="caption-full">
-                            <h4 class="pull-right">Descuento</h4>
-                            <h4><a href="Product.html">Producto</a></h4>
+                            <h4 class="pull-right">Bateria.  Precio:300.000</h4>
+                            <h4><a href="Product.html">Detalle</a></h4>
                             <button class="btn btn-primary btn-sm">
+                            Comprar
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                     <div class="col-md-4 col-sm-6">
+
+                    <div class="thumbnail">
+                        <img class="img-responsive" src="images/stevevai.jpg" alt="">
+                        <div class="caption-full">
+                            <h4 class="pull-right">Guitarra .  Precio:  200.00</h4>
+                            <h4><a href="Product.html">Detalle</a></h4>
+                            <buttom class="btn btn-primary btn-sm">
                             Comprar
                             </button>
                         </div>
@@ -191,108 +206,11 @@
                 <div class="col-md-4 col-sm-6">
 
                     <div class="thumbnail">
-                        <img class="img-responsive" src="http://placehold.it/800x300" alt="">
-                        <div class="caption-full">
-                            <h4 class="pull-right">Descuento</h4>
-                            <h4><a href="Product.html">Producto</a></h4>
-                            <button class="btn btn-primary btn-sm">
-                            Comprar
-                            </button>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-md-4 col-sm-6">
-
-                    <div class="thumbnail">
-                        <img class="img-responsive" src="http://placehold.it/800x300" alt="">
-                        <div class="caption-full">
-                            <h4 class="pull-right">G</h4>
-                            <h4><a href="Product.html">Descuento</a></h4>
-                            <button class="btn btn-primary btn-sm">
-                            Comprar
-                            </button>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-md-4 col-sm-6">
-
-                    <div class="thumbnail">
-                        <img class="img-responsive" src="http://placehold.it/800x300" alt="">
-                        <div class="caption-full">
-                            <h4 class="pull-right">Descuento</h4>
-                            <h4><a href="Product.html">Producto</a></h4>
-                            <button class="btn btn-primary btn-sm">
-                            Comprar
-                            </button>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-md-4 col-sm-6">
-
-                    <div class="thumbnail">
-                        <img class="img-responsive" src="http://placehold.it/800x300" alt="">
+                        <img class="img-responsive" src="images/teclado.jpg" alt="">
                         <div class="caption-full">
                             <h4 class="pull-right"></h4>
-                            <h4><a href="Product.html">Producto</a></h4>
-                            <button class="btn btn-primary btn-sm">
-                            Comprar
-                            </button>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-md-4 col-sm-6">
-
-                    <div class="thumbnail">
-                        <img class="img-responsive" src="http://placehold.it/800x300" alt="">
-                        <div class="caption-full">
-                            <h4 class="pull-right"></h4>
-                            <h4><a href="Product.html">Producto</a></h4>
-                            <button class="btn btn-primary btn-sm">
-                            Comprar
-                            </button>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-md-4 col-sm-6">
-
-                    <div class="thumbnail">
-                        <img class="img-responsive" src="http://placehold.it/800x300" alt="">
-                        <div class="caption-full">
-                            <h4 class="pull-right"></h4>
-                            <h4><a href="Product.html">Producto</a></h4>
-                            <button class="btn btn-primary btn-sm">
-                            Comprar
-                            </button>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-md-4 col-sm-6">
-
-                    <div class="thumbnail">
-                        <img class="img-responsive" src="http://placehold.it/800x300" alt="">
-                        <div class="caption-full">
-                            <h4 class="pull-right"></h4>
-                            <h4><a href="Product.html">Producto</a></h4>
-                            <button class="btn btn-primary btn-sm">
-                            Comprar
-                            </button>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-md-4 col-sm-6">
-
-                    <div class="thumbnail">
-                        <img class="img-responsive" src="http://placehold.it/800x300" alt="">
-                        <div class="caption-full">
-                            <h4 class="pull-right"></h4>
-                            <h4><a href="Product.html">Producto</a></h4>
+                                 <h4 class="pull-right">Teclado .  Precio: 350.000</h4>
+                             <h4><a href="Product.html">Detalle</a></h4>
                             <button class="btn btn-primary btn-sm">
                             Comprar
                             </button>
@@ -305,23 +223,7 @@
     </section>
     <!-- Fin Contenedor Section -->
 
-    <!-- Contenedor Footer-->
-    <footer class="footer">
-        <div class="container">
-          <div class="row">
-            <div class="col-xs-6">
-              <p>El rincón de souza Inc.</p>
-            </div>
-            <div class="col-xs-6">
-              <ul class="list-inline text-right">
-                <li><a href="#">Facebook</a></li>
-                <li><a href="#">Twitter</a></li>
-                <li><a href="#">Instagram</a></li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </footer>
+
     <!-- Fin Contenedor Footer -->
 
     <!-- Inicio Formulario Acceder -->
