--- a/Product.html
+++ b/Product.html
@@ -82,7 +82,7 @@
                 <div class="thumbnail">
                     <img class="img-responsive" src="images/stevevai.jpg" alt="">
                     <div class="caption-full">
-                        <h4 class="pull-right">Descuento</h4>
+                        <h4 class="pull-right">Precio</h4>
                         <h4>
                             <a href="#">Producto</a>
                         </h4>
@@ -93,12 +93,46 @@
                     </div>
                 </div>
 
+<div class="well">
+
+                    <div class="text-right">
+                        <a class="btn btn-success">Comentar</a>
+                    </div>
+
+                    <hr>
+
+                    <div class="row">
+                        <div class="col-md-12">
+                            <strong>Raul dijo:</strong>
+                            <span class="pull-right text-muted">10/05/2016</span>
+                            <p>Que guitarras mas preciososa</p>
+                        </div>
+                    </div>
+
+                    <hr>
+
+                    <div class="row">
+                        <div class="col-md-12">
+                            <strong>:</strong>
+                            <span class="pull-right text-muted"></span>
+                            <p></p>
+                        </div>
+                    </div>
+
+                    <hr>
+
+                </div>
+
+
+
+
+
             <div class="col-md-12">
 
                 <div class="thumbnail">
                     <img class="img-responsive" src="images/guitarra.jpg" alt="">
                     <div class="caption-full">
-                        <h4 class="pull-right">Descuento</h4>
+                        <h4 class="pull-right">Precio:</h4>
                         <h4>
                             <a href="#">Producto</a>
                         </h4>
@@ -148,24 +182,6 @@
     </section>
     <!-- Fin Contenedor Section -->
 
-    <!-- Contenedor Footer-->
-    <footer class="footer">
-        <div class="container">
-          <div class="row">
-            <div class="col-xs-6">
-              <p>El rincón de souza Inc.</p>
-            </div>
-            <div class="col-xs-6">
-              <ul class="list-inline text-right">
-                <li><a href="#">Facebook</a></li>
-
-    
-              </ul>
-            </div>
-          </div>
-        </div>
-      </footer>
-    <!-- Fin Contenedor Footer -->
 
     <!-- Inicio Formulario Acceder -->
 	<div class="modal fade" id="Login">
