se agrega descripcion de producto

--- a/Product.html
+++ b/Product.html
@@ -82,14 +82,14 @@
                 <div class="thumbnail">
                     <img class="img-responsive" src="images/stevevai.jpg" alt="">
                     <div class="caption-full">
-                        <h4 class="pull-right">Precio</h4>
+                        <h4 class="pull">Precio: 700.000</h4>
                         <h4>
-                            <a href="#">Producto</a>
+                         <a href="#"></a>
                         </h4>
                         <button class="btn btn-primary btn-sm">
                         Comprar
                         </button>
-                        <p>Descripcion del producto</p>
+                        <p>Descripcion Producto: La JEM 7VWH es la top de la línea signature de Steve Vai. Si bien el modelo fue diseñado para sus necesidades, es una guitarra extremadamente versátil, tanto así que el mismo Vai decidió llamarla JEM y no SV, para que la guitarra adquiriera su propia personalidad, lo que definitivamente se ha logrado desde su introducción en 1988. La 7V tiene un cuerpo de aliso (Alder), basado en las formas rectas de RG, pero con la adición de los detalles ya clásicos como el Monkey Grip, una manilla en el cuerpo de la guitarra, y el Lions Claw, una cavidad extra grande bajo el tremolo, que permite el uso extremo de éste. La terminación blanca es a base de uretano, lo que retarda el tono amarillo que van tomando los instrumentos blancos con los años. El brazo Prestige es de Maple/Walnut, con diapasón de ébano, trastes Dunlop 6105, y las incrustaciones Tree of Life en madreperla, a lo largo de los 24 trastes. Los espacios 21 al 24 están escalopados, para bends en los registros altos mucho más cómodos.</p>
                     </div>
                 </div>
 
@@ -132,14 +132,14 @@
                 <div class="thumbnail">
                     <img class="img-responsive" src="images/guitarra.jpg" alt="">
                     <div class="caption-full">
-                        <h4 class="pull-right">Precio:</h4>
+                        <h4 class="pull">Precio: 700.000</h4>
                         <h4>
-                            <a href="#">Producto</a>
+                            <a href="#"></a>
                         </h4>
                         <button class="btn btn-primary btn-sm">
                         Comprar
                         </button>
-                        <p>Descripcion del producto</p>
+                        <p>Descripcion Producto:Descripcion Producto:El modelo JPX de la línea de la firma John Petrucci de Música Instrumentos hombre. Ofrece un trío de primera calidad, incluyendo maderas acústicas Mahogony , arce y aliso , el cuerpo cámaras de resonancia superior, y un interruptor de lámina de cinco vías para facilitar el acceso al doble bobinado y los tonos de bobinas divididas. Cómodo y ligero del JPX es un instrumento sorprendente cargado con muchas opciones de rendimiento hi incluyendo el sistema de puente piezo pickup para los tonos acústicos exuberantes , a medida Dimarzio la electrónica y ampliado menor cuerno hueco que permite un acceso sin precedentes a los trastes palanca superior</p>
                     </div>
                 </div>
 
