--- a/category.html
+++ b/category.html
@@ -94,7 +94,7 @@
 
                     <div class="thumbnail">
 
-                        <img class="img-responsive" src="images/guitarras.jpg" alt="">
+                        <img class="img-responsive" src="images/guitarra.jpg" alt="">
                         <div class="caption-full">
                             <h4 class="pull-right">Guitarras John Petrucci.   Precio: 700.000 </h4>
                             <h4><a href="Product.html">Detalle</a></h4>
@@ -166,7 +166,7 @@
                     <div class="thumbnail">
                         <img class="img-responsive" src="images/bajo.jpg" alt="">
                         <div class="caption-full">
-                            <h4 class="pull-right">Bajo .  Precio:  200.00 </h4>
+                            <h4 class="pull-right">Bajo .  Precio:  200.000 </h4>
                             <h4><a href="Product.html">Detalle</a></h4>
                             <buttom class="btn btn-primary btn-sm">
                             Comprar
