se agrega descripcion de producto

--- a/Product.html
+++ b/Product.html
@@ -175,6 +175,133 @@
 
                 </div>
 
+
+
+            <div class="col-md-12">
+
+                <div class="thumbnail">
+                    <img class="img-responsive" src="images/bateria.jpg" alt="">
+                    <div class="caption-full">
+                        <h4 class="pull">Precio: 300.000</h4>
+                        <h4>
+                            <a href="#"></a>
+                        </h4>
+                        <button class="btn btn-primary btn-sm">
+                        Comprar
+                        </button>
+                        <p>Descripcion Producto:Set de batería Mars MA528SF, color BZW, incluye set de atrilería HP6005EB Mapex.
+                        La serie Mars ofrece un set construido en un 100% de abedul, lo que se traduce en un sonido de tono claro y de rápida recuperación. "Crossover" serie Mars posee una configuración ideal para los bateristas de rock, con un solo tom de rack para darte un mejor acceso al ride</p>
+                    </div>
+                </div>
+
+
+            <div class="col-md-12">
+
+                <div class="thumbnail">
+                    <img class="img-responsive" src="images/pedales.jpg" alt="">
+                    <div class="caption-full">
+                        <h4 class="pull">Precio: 50.000</h4>
+                        <h4>
+                            <a href="#"></a>
+                        </h4>
+                        <button class="btn btn-primary btn-sm">
+                        Comprar
+                        </button>
+                        <p>Descripcion Producto: Selector de línea LS2  Fender.
+                         El LS-2 es la forma fácil de cambiar ajustes entre varios efectos o amplificadores, o direccionar señales de entrada y salida. Cuando se utiliza con un adaptador CA, el LS-2 puede servir como alimentación para varios pedales Fender compactos</p>
+                    </div>
+                </div>
+
+
+            <div class="col-md-12">
+
+                <div class="thumbnail">
+                    <img class="img-responsive" src="images/amplificador-marshall.jpg" alt="">
+                    <div class="caption-full">
+                        <h4 class="pull">Precio: 200.000</h4>
+                        <h4>
+                            <a href="#"></a>
+                        </h4>
+                        <button class="btn btn-primary btn-sm">
+                        Comprar
+                        </button>
+                        <p>Descripcion Producto:Amplificador de guitarra electroacústica ACOUSTASONIC 50, 50 watts marshall.
+                         El marshall  es perfecto para el guitarrista  que necesita amplificación completa, potente y asequible. Está equipado con nuevos sistemas para simular el sonido de diferentes tipos de guitarras acústicas a través del control “Voicing” (acústicas parlor, dreadnought y jumbo). El modelo incorpora dos altavoces e incluye canales independientes para instrumento y micrófono con sus controles de efectos y ecualización, eliminación de control de feedback con switch de on/off para cada canal, control dinámico de cuerdas, efectos, salida de línea XLR con control de nivel, loop estéreo de efectos, entrada USB para grabación digital, una construcción de madera de cinco capas, aspecto clásico Fender con revestimiento de vinilo en color marrón, entre otras características.
+</p>
+                    </div>
+                </div>
+
+
+                   <div class="col-md-12">
+
+                <div class="thumbnail">
+                    <img class="img-responsive" src="images/cables.jpg" alt="">
+                    <div class="caption-full">
+                        <h4 class="pull">Precio: 18.000 C/U</h4>
+                        <h4>
+                            <a href="#"></a>
+                        </h4>
+                        <button class="btn btn-primary btn-sm">
+                        Comprar
+                        </button>
+                        <p>Descripcion Producto: Cable para instrumento EP1721SS Overbraid, 6 metros, color negro  Fender.
+                             El EP1721SS OVERBRAID  FENDER es cable para instrumento de 6m de largo de cobre + Pvc, conductor con un revestimiento engomado, lo que le proporciona una ultra protección, calidad de sonido y resistencia por mucho tiempo. Estimado cliente, si en nuestro catálogo no encuentra el producto Fender que usted busca, nos puede llamar al fono: 600 3842020. Todos los productos FENNDER estarán disponibles a través de pedidos especiales importados directamente desde la fábrica en aproximadamente 30 días.</p>
+                    </div>
+                </div>
+
+
+
+                   <div class="col-md-12">
+
+                <div class="thumbnail">
+                    <img class="img-responsive" src="images/guitarras.jpg" alt="">
+                    <div class="caption-full">
+                        <h4 class="pull">Precio: 900.000 C/U</h4>
+                        <h4>
+                            <a href="#"></a>
+                        </h4>
+                        <button class="btn btn-primary btn-sm">
+                        Comprar
+                        </button>
+                        <p>Descripcion Producto: El modo JP7 de la línea de la firma John Petrucci de Música Instrumentos hombre. Ofrece un trío de primera calidad, incluyendo maderas acústicas Mahogony , arce y aliso , el cuerpo cámaras de resonancia superior, y un interruptor de lámina de cinco vías para facilitar el acceso al doble bobinado y los tonos de bobinas divididas. Cómodo y ligero del JPX es un instrumento sorprendente cargado con muchas opciones de rendimiento hi incluyendo el sistema de puente piezo pickup para los tonos acústicos exuberantes , a medida Dimarzio la electrónica y ampliado menor cuerno hueco que permite un acceso sin precedentes a los trastes palanca superior ..</p>
+                    </div>
+                </div>
+
+                   <div class="col-md-12">
+
+                <div class="thumbnail">
+                    <img class="img-responsive" src="images/bajo.jpg" alt="">
+                    <div class="caption-full">
+                        <h4 class="pull">Precio: 200.000 C/U</h4>
+                        <h4>
+                            <a href="#"></a>
+                        </h4>
+                        <button class="btn btn-primary btn-sm">
+                        Comprar
+                        </button>
+                        <p>Descripcion Producto:Bajo eléctrico B-4E color natural satin (NS) Ltd.
+                        Bajo eléctrico de 4 cuerdas marca ESP/LTD, de construcción Neck-Thru. Fabricado en caoba con tapa de ébano y brazo de 5 piezas de maple y caoba, con diapasón de ebano y 24 frets jumbo. Está equipado con cápsulas SB-4 en posición neck y bridge, preamplificador activo con EQ de 3 bandas. </p>
+                    </div>
+                </div>
+
+            <div class="col-md-12">
+
+                <div class="thumbnail">
+                    <img class="img-responsive" src="images/teclado.jpg" alt="">
+                    <div class="caption-full">
+                        <h4 class="pull">Precio: 350.000</h4>
+                        <h4>
+                            <a href="#"></a>
+                        </h4>
+                        <button class="btn btn-primary btn-sm">
+                        Comprar
+                        </button>
+                        <p>Descripcion Producto:Piano digital SP5-8 Kurzweil.
+                        El SP5-8 KURZWEIL es un piano de escenario con más de 861 programas de fábrica repartidos en 20 categorías accesibles con botones directos desde el teclado. Entre sus principales características encontramos: Teclado totalmente contrapesado con aftertouch, 5 faders, modo KB3, efectos, rueda de pitch bend y modulación, entre otras</p>
+                    </div>
+                </div>
+
+
             </div>
 
         </div>
@@ -183,84 +310,8 @@
     <!-- Fin Contenedor Section -->
 
 
-    <!-- Inicio Formulario Acceder -->
-	<div class="modal fade" id="Login">
-	  <div class="modal-dialog modal-sm">
-	    <div class="modal-content">
 
-	      <div class="modal-header">
-	        <a href="" class="btn btn-primary btn-block" role="button">
-	          <i class="fa fa-facebook">Inicia sesión con Facebook</i>
-	        </a>
-	      </div>
-
-	      <div class="modal-body">
-	        <p id="formtxt">o también</p>
-
-	        <form>
-	          <div class="form-group">
-	            <label for="inputEmail">Email</label>
-	            <input type="email" class="form-control" id="inputEmail" placeholder="Ingresa tu email">
-	          </div>
-	          <div class="form-group">
-	            <label for="inputPassword">Contraseña</label>
-	            <input type="password" class="form-control" id="inputPassword" placeholder="Ingresa tu contraseña">
-	            <buttom type="submit" class="btn btn-success btn-block">Iniciar sesión</buttom>
-	          </div>
-	        </form>
-	      </div>
-
-	      <div class="modal-footer">
-	        <p><a href="">Has olvidado tu contraseña?</a></p>
-	      </div>
-	      
-	    </div>
-	  </div>
-	</div>
-	<!-- Fin Formulario Acceder -->
-
-	<!-- Inicio Formulario Registrarse -->
-
-	<div class="modal fade" id="Signup">
-	  <div class="modal-dialog modal-sm">
-	    <div class="modal-content">
-	      
-	      <div class="modal-header">
-	        <a href="" class="btn btn-primary btn-block" role="button">
-	          <i class="fa fa-facebook">Registrate con Facebook</i>
-	        </a>
-	      </div>
-
-	      <div class="modal-body">
-	        <p id="formtxt">o también</p>
-	        <form>
-	          <div class="form-group">
-	            <label for="inputName">Nombre de Usuario</label>
-	            <input type="text" class="form-control" id="inputName" placeholder="Ingresa un nombre de usuario">
-	          </div>
-	          <div class="form-group">
-	            <label for="inputEmailSignup">Email</label>
-	            <input type="email" class="form-control" id="inputEmailSignup" placeholder="Ingresa una direccion de correo valido">
-	          </div>
-	          <div class="form-group">
-	            <label for="inputPasswordSignup">Contraseña</label>
-	            <input type="password" class="form-control" id="inputPasswordSignup" placeholder="Escribe una contraseña">
-	          </div>
-	          <div class="form-group">
-	            <label for="inputPasswordSignupr">Nombre de Usuario</label>
-	            <input type="password" class="form-control" id="inputPasswordSignupr" placeholder="Escribe de nuevo tu contraseña">
-	          </div>
-	          <button type="submit" class="btn btn-success btn-block">Registrate</button>
-	        </form>
-	      </div>
-
-	      <div class="modal-footer">
-	        <p>Al registrarme, <a href="">Acepto los Términos de Uso</a> y <a href="">La Política de Privacidad</a></p>
-	      </div>
-
-	    </div>
-	  </div>
-	</div>
+	
 
 	<!-- Inicio Formulario Registrarse -->
 
